[P6-142] fix: 예약 시간대 반응형 수정 (gap)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,7 +117,7 @@
   }
 
   .date-time-list-grid-layout {
-    @apply flex flex-wrap gap-x-4 gap-y-5 sm:grid sm:grid-cols-[2fr_1fr_auto_1fr_56px];
+    @apply flex flex-wrap gap-x-4 gap-y-3 border-x-0 border-t-0 border-b-2 border-dashed border-b-gray-300 pb-3 sm:grid sm:grid-cols-[2fr_1fr_auto_1fr_56px] sm:gap-y-5 sm:border-0 sm:pb-0;
   }
 }
 
